Fixed version incompatible code